# ChangeLog for dev-libs/libmaa
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libmaa/ChangeLog,v 1.29 2012/04/07 07:06:09 scarabeus Exp $

  07 Apr 2012; Tomáš Chvátal <scarabeus@gentoo.org> -libmaa-1.1.1.ebuild,
  -libmaa-1.2.0.ebuild, libmaa-1.3.1.ebuild:
  Drop older. Handle static libs in latest.

  18 Mar 2012; Raúl Porcel <armin76@gentoo.org> libmaa-1.3.0.ebuild:
  ia64/sparc stable wrt #396897

  06 Mar 2012; Brent Baude <ranger@gentoo.org> libmaa-1.3.0.ebuild:
  Marking libmaa-1.3.0 ppc64 for bug 396897

  02 Mar 2012; Tobias Klausmann <klausman@gentoo.org> libmaa-1.3.0.ebuild:
  Stable on alpha, bug #396897

  16 Feb 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> libmaa-1.3.0.ebuild:
  x86 stable wrt bug #396897

*libmaa-1.3.1 (15 Feb 2012)

  15 Feb 2012; Tomáš Chvátal <scarabeus@gentoo.org> +libmaa-1.3.1.ebuild:
  Version bump to latest.

  14 Feb 2012; Brent Baude <ranger@gentoo.org> libmaa-1.3.0.ebuild:
  Marking libmaa-1.3.0 ppc for bug 396897

  02 Feb 2012; Agostino Sarubbo <ago@gentoo.org> libmaa-1.3.0.ebuild:
  Stable for amd64, wrt bug #396897

*libmaa-1.3.0 (28 Jun 2011)

  28 Jun 2011; Peter Volkov <pva@gentoo.org> +libmaa-1.3.0.ebuild:
  Version bump, bug #372531 thank Kent Fredric for report.

  21 May 2010; Peter Volkov <pva@gentoo.org> libmaa-1.2.0.ebuild:
  amd64 stable, bug 310023

  04 Apr 2010; Raúl Porcel <armin76@gentoo.org> libmaa-1.2.0.ebuild:
  alpha/ia64/sparc stable wrt #310023

  31 Mar 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> libmaa-1.2.0.ebuild:
  x86 stable wrt bug #310023

  14 Jan 2010; Christian Faulhammer <fauli@gentoo.org> libmaa-1.2.0.ebuild:
  Transfer Prefix keywords

*libmaa-1.2.0 (27 Dec 2009)

  27 Dec 2009; Peter Volkov <pva@gentoo.org> -libmaa-1.1.0.ebuild,
  -files/libmaa-1.1.0-LDFLAGS.patch, +libmaa-1.2.0.ebuild:
  Version bump.

  13 Jun 2009; Raúl Porcel <armin76@gentoo.org> libmaa-1.1.1.ebuild:
  ia64/sparc stable wrt #271122
