@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libmaa/Attic/libmaa-1.3.1.ebuild,v 1.2 2012/04/07 07:06:09 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libmaa/Attic/libmaa-1.3.1.ebuild,v 1.3 2012/04/07 07:38:32 scarabeus Exp $
 
 EAPI=4
 
@@ -11,17 +11,6 @@ SRC_URI="mirror://sourceforge/dict/${P}.tar.gz"
 LICENSE="LGPL-2"
 SLOT="0"
 KEYWORDS="~alpha ~amd64 ~hppa ~ia64 ~mips ~ppc ~ppc64 ~sparc ~x86 ~amd64-linux ~ia64-linux ~x86-linux"
-IUSE="static-libs"
+IUSE=""
 
 DOCS="ChangeLog NEWS README doc/libmaa.600dpi.ps"
-
-src_configure() {
-	econf \
-		$(use_enable static-libs static)
-}
-
-src_install() {
-	default
-
-	find "${ED}" -name '*.la' -exec rm -f {} +
-}
