@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libmaa
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libmaa/ChangeLog,v 1.29 2012/04/07 07:06:09 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libmaa/ChangeLog,v 1.30 2012/04/07 07:38:32 scarabeus Exp $
+
+  07 Apr 2012; Tomáš Chvátal <scarabeus@gentoo.org> libmaa-1.3.1.ebuild:
+  Revert static-libs switch due to my statement in bug#401935.
 
   07 Apr 2012; Tomáš Chvátal <scarabeus@gentoo.org> -libmaa-1.1.1.ebuild,
   -libmaa-1.2.0.ebuild, libmaa-1.3.1.ebuild:
